# mdo-platform

./: .dockerignore  .env.example  .gitignore  .pnpmfile.cjs  CLAUDE.md  DEPLOY.md  Dockerfile  MDO_INTEL.md  MDO_VISION.md  levels.yaml  mdo_config.json  mdo_server.py  orchestrator-skeleton.patch  package.json  pyproject.toml  railway.toml  requirements_server.txt  seed_mdo_db.py  start_vega.bat  tsconfig.base.json
agents/_test-agent/: index.ts  package.json
apps/workers/: .env.example  package.json
mdo-app/: next.config.ts  package-lock.json  package.json  railway.toml
mdo-app/app/: globals.css  layout.tsx  page.tsx
mdo-app/electron/: main.js
mdo-app/lib/: api.ts  store.ts  types.ts
scripts/: backtest.py  test_hdfc_auth.py
vega/: __init__.py  __main__.py  config.py  engine.py  events.py  exceptions.py
vega/broker/: auth.py  client.py  endpoints.py  market_data.py  models.py  orders.py  portfolio.py
vega/core/: __init__.py  alerts.py  scheduler.py
vega/dashboard/: server.py
vega/data/: cache.py  external_feeds.py  models.py  pending_order.json  store.py
vega/exports/: sheets.py
vega/sentiment/: analyzer.py  client.py  models.py  poller.py  portfolio_watch.py  prompts.py  singhvi.py  youtube_monitor.py
vega/strategy/: indicators.py  levels.py  momentum.py  risk.py  signals.py  watchlist.py
vega/telegram_bot/: alerts.py  bot.py  formatters.py  handlers.py  keyboards.py  mdo_store.py
vega/utils/: logging.py  nse.py  retry.py  time.py
vega/vedanta/: __init__.py  (+2 more)
whatsapp_bridge/: Dockerfile  index.js  package.json  railway.toml  server.js
(+25 files in other folders)
