[project]
name = "vega"
version = "0.1.0"
description = "VEGA - Algorithmic Trading Agent for Indian Markets (NSE)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "aiosqlite>=0.19",
    "structlog>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "respx>=0.20",
    "ruff>=0.1",
]
backtest = [
    "yfinance>=0.2",
    "plotly>=5.0",
]
youtube = [
    "yt-dlp>=2024.1",
    "faster-whisper>=1.0",
]

[project.scripts]
vega = "vega.__main__:main"
